--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -17,7 +17,7 @@
 
         <div class="row justify-content-around mt-4">
             <div class="col-sm-8">
-                <a href="#" class="btn btn-primary float-end"> Add </a>
+                <a href="add-student" class="btn btn-primary float-end"> Add </a>
             </div>
         </div>
 
@@ -26,7 +26,7 @@
             <table class="table table-dark table-hover">
                     <thead>
                         <tr>
-                        <th scope="col">#</th>
+                        <th scope="col">S.N</th>
                         <th scope="col">Name</th>
                         <th scope="col">Roll</th>
                         <th scope="col">City</th>
